# skanlite

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  snapcraft.yaml
autotests/: CMakeLists.txt
doc/: CMakeLists.txt  index.docbook
hotkeys_and_scripts/: endless_scan.sh  hw_btn_scan.sh  post_processing.sh  skanlite.khotkeys
po/ar/: skanlite.po
po/az/: skanlite.po
po/be/: skanlite.po
po/bg/: skanlite.po
po/bs/: skanlite.po
po/ca/: skanlite.po
po/ca/docs/skanlite/: index.docbook
po/ca@valencia/: skanlite.po
po/cs/: skanlite.po
po/da/: skanlite.po
po/de/: skanlite.po
po/de/docs/skanlite/: index.docbook
po/el/: skanlite.po
po/en_GB/: skanlite.po
po/eo/: skanlite.po
po/es/: skanlite.po
po/es/docs/skanlite/: index.docbook
po/et/: skanlite.po
po/eu/: skanlite.po
po/fi/: skanlite.po
po/fr/: skanlite.po
po/fr/docs/skanlite/: index.docbook
po/ga/: skanlite.po
po/gl/: skanlite.po
po/he/: skanlite.po
po/hi/: skanlite.po
po/hr/: skanlite.po
po/hu/: skanlite.po
po/ia/: skanlite.po
po/id/: skanlite.po
po/id/docs/skanlite/: index.docbook
po/ie/: skanlite.po
po/is/: skanlite.po
po/it/: skanlite.po
po/it/docs/skanlite/: index.docbook
po/ja/: skanlite.po
po/ka/: skanlite.po
po/km/: skanlite.po
po/ko/: skanlite.po
po/lt/: skanlite.po
po/lv/: skanlite.po
po/mai/: skanlite.po
po/mr/: skanlite.po
po/nb/: skanlite.po
po/nds/: skanlite.po
po/nl/: skanlite.po
po/nl/docs/skanlite/: index.docbook
po/nn/: skanlite.po
po/pa/: skanlite.po
po/pl/: skanlite.po
po/pt/: skanlite.po
po/pt/docs/skanlite/: index.docbook
po/pt_BR/: skanlite.po
po/pt_BR/docs/skanlite/: index.docbook
po/ro/: skanlite.po
po/ru/: skanlite.po
po/ru/docs/skanlite/: index.docbook
po/sa/: skanlite.po
po/sk/: skanlite.po
po/sl/: skanlite.po
po/sl/docs/skanlite/: index.docbook
po/sq/: skanlite.po
po/sv/: skanlite.po
po/sv/docs/skanlite/: index.docbook
po/tr/: skanlite.po
po/ug/: skanlite.po
po/uk/: skanlite.po
po/uk/docs/skanlite/: index.docbook
po/wa/: skanlite.po
po/zh_CN/: skanlite.po
po/zh_TW/: skanlite.po
src/: CMakeLists.txt  DBusInterface.cpp  DBusInterface.h  FindKsane.cmake  ImageViewer.cpp  ImageViewer.h  KSaneImageSaver.cpp  KSaneImageSaver.h  Messages.sh  SaveLocation.cpp  SaveLocation.h  SaveLocation.ui  SkanliteImageSaver.cpp  SkanliteImageSaver.h  TODO  glimpse.cpp  glimpse.desktop  glimpse.h  main.cpp  org.kde.skanlite.appdata.xml  org.kde.skanlite.desktop  save_mode.ui  settings.ui  showimagedialog.cpp  showimagedialog.h  skanlite.cpp  skanlite.desktop  skanlite.h  version.h.cmake
tests/: CMakeLists.txt
